fixed spacing for mobile

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
 .contact-box {
   display: block;
   padding-top: 15%;
-  padding-bottom: 20%;
+  padding-bottom: 30%;
 }
 
 /* home image and text */
